--- a/k8s_files/service.yaml
+++ b/k8s_files/service.yaml
@@ -2,16 +2,15 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pandacloud-app
+  name: spotify-app
   labels:
-    app: pandacloud-app
+    app: spotify-app
 spec:
   ports:
-  - name: http
-    port: 3000
-    protocol: TCP
-    targetPort: 3000
+    - name: http
+      port: 8080
+      protocol: TCP
+      targetPort: 8080
   selector:
-    app: pandacloud-app
+    app: spotify-app
   type: LoadBalancer
-...
